Jobs @ WE RECRUIT | JOIN. Jobs @ WE RECRUIT | JOIN. Futrli - Jobs: Lead UI Engineer - Apply online. Futrli - Jobs: Lead UI Engineer (Belfast) - Apply online. Job @ WE RECRUIT (Zürich): Talent Acquisition Manager | JOIN. Job @ WE RECRUIT (Zürich): Team Leader Engineering... | JOIN. Job @ WE RECRUIT (Basel): Team Leader Life Science... | JOIN. Job @ WE RECRUIT (Zürich): Teamleiter/in IT Contra... | JOIN. Job @ WE RECRUIT (Zürich): Team Leader Engineering... | JOIN. Job @ WE RECRUIT (Zürich): Recruitment Consultant ... | JOIN. Job @ WE RECRUIT (Basel): Sourcer/Recruiter Life S... | JOIN. Job @ WE RECRUIT (Zürich): Researcher/ Associate C... | JOIN. Job @ WE RECRUIT (Basel): Recruitment Consultant/H... | JOIN. Job Application for UX / UI Designer at Cast & Crew Entertainment Services, LLC.       UI concept designer - Nacar Careers     . Bravium Consulting Careers - Salesforce UI/UX Designer. Web/UI designer - New service development - Rakuten Careers. Delta Dental - Senior Software Engineer - UI/UX. Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Hambu... | JOIN. Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Stutt... | JOIN. Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Kempe... | JOIN. Application Developer - Cupid - Jobs@UIOWA Careers. Clinical/HC Research Associate - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Nursing Practice Leader - Nursing Education - Jobs@UIOWA Careers. Job @ NIST (Berlin): Internship UI/UX | JOIN. Ingram Micro Careers - Manager, UX/UI Design. Gallery Manager (m/w/d) auf der Mein Schiff Flotte von TUI Cruises. Farfetch Careers - Senior UI/UX Product Designer. Job @ Enterprise Bot (Bengaluru): UI Developer - H... | JOIN. UX/UI Designer - Codal - Career Page. Senior UX/UI Designer - Codal - Career Page. SafeAuto - UI Solution Architect. UI Designer 2 | Current Opportunities. Futrli - Jobs: Lead UI Engineer - Apply online. Netflix - Senior UI Engineer - Ne

--- a/ui.html
+++ b/ui.html
@@ -40,6 +40,58 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://we-recruit.join.com'>Jobs @ WE RECRUIT | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://we-recruit.join.com/'>Jobs @ WE RECRUIT | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://futrli.workable.com/j/12D221F33F'>Futrli - Jobs: Lead UI Engineer - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://futrli.workable.com/j/199CD66D3A'>Futrli - Jobs: Lead UI Engineer (Belfast) - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://we-recruit.join.com/jobs/273790-talent-acquisition-manager'>Job @ WE RECRUIT (Z?rich): Talent Acquisition Manager | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://we-recruit.join.com/jobs/265559-team-leader-engineering-zurich'>Job @ WE RECRUIT (Z?rich): Team Leader Engineering... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://we-recruit.join.com/jobs/261575-team-leader-life-sciences-basel'>Job @ WE RECRUIT (Basel): Team Leader Life Science... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://we-recruit.join.com/jobs/256008-teamleiter-in-it-contracting-basel'>Job @ WE RECRUIT (Z?rich): Teamleiter/in IT Contra... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://we-recruit.join.com/jobs/257529-team-leader-engineering-contracting'>Job @ WE RECRUIT (Z?rich): Team Leader Engineering... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://we-recruit.join.com/jobs/268024-recruitment-consultant-life-sciences'>Job @ WE RECRUIT (Z?rich): Recruitment Consultant ... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://we-recruit.join.com/jobs/264770-sourcer-recruiter-life-science-recruitment'>Job @ WE RECRUIT (Basel): Sourcer/Recruiter Life S... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://we-recruit.join.com/jobs/267330-researcher-associate-consultant-executive-search'>Job @ WE RECRUIT (Z?rich): Researcher/ Associate C... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://we-recruit.join.com/jobs/274479-recruitment-consultant-headhunter-life-sciences-take-your-shot'>Job @ WE RECRUIT (Basel): Recruitment Consultant/H... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/113134/jobs/4369940002'>Job Application for UX / UI Designer at Cast & Crew Entertainment Services, LLC</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
@@ -54,7 +106,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://rakuten.referrals.selectminds.com/jobs/web-ui-designer-new-service-development-9710'>Web/UI designer - New service development - Rakuten Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/web-ui-designer-new-service-development-9710'>Web/UI designer - New service development - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -102,7 +154,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=oOyY9fwd&__jvst=Employee&__jvsd=sm7b5hwv&__jvsc=Twitter&bid=nAgYVLwZ'>Ingram Micro Careers - Manager, UX/UI Design</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=oOyY9fwd&__jvst=Employee&__jvsd=sm7b5hwv&__jvsc=Twitter&bid=nAgYVLwZ'>Ingram Micro Careers - Manager, UX/UI Design</a></h5> 
 <p><span class="badge badge-light">Irvine California</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -123,7 +175,7 @@ Flotte von TUI Cruises in Berlin (published: 12.06.2019). Apply now or check?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://codal.applytojob.com/apply/V5zBUjtqxb/Senior-UXUI-Designer'>Senior UX/UI Designer - Codal - Career Page</a></h5> 
+<h5><a href='http://codal.applytojob.com/apply/V5zBUjtqxb/Senior-UXUI-Designer'>Senior UX/UI Designer - Codal - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -165,7 +217,7 @@ involve?...</p>
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/clinical-technician-i-4355'>Clinical Technician I - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/clinical-technician-i-4355'>Clinical Technician I - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -233,7 +285,7 @@ involve?...</p>
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/nursing-unit-clerk-stead-family-childrens-hospital-l10-4357'>Nursing Unit Clerk - Stead Family Children's Hospital L10 - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/nursing-unit-clerk-stead-family-childrens-hospital-l10-4357'>Nursing Unit Clerk - Stead Family Children's Hospital L10 - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -288,7 +340,7 @@ generation web and mobile components and interfaces. Develop new ways of?...</p>
 <p><span class="badge badge-light">Vietnam Vietnam</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/splunk/job/o36CafwF'>Splunk Careers - Principal UI Designer, Enterprise</a></h5> 
+<h5><a href='https://jobs.jobvite.com/splunk/job/o36CafwF'>Splunk Careers - Principal UI Designer, Enterprise</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Join us as we pursue our disruptive new vision to make machine data accessible, 
 usable and valuable to everyone. We are a company filled with people who?...</p>
@@ -302,7 +354,7 @@ team. You are an ideal candidate if you have previously worked on parking?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://optelgroup.applytojob.com/apply/9myQ285Sv2/Concepteur-UXUI-Designer-UXUI'>Concepteur UX/UI - Designer UX/UI - Optel Group - Career Page</a></h5> 
+<h5><a href='http://optelgroup.applytojob.com/apply/9myQ285Sv2/Concepteur-UXUI-Designer-UXUI'>Concepteur UX/UI - Designer UX/UI - Optel Group - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -323,7 +375,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://experian.referrals.selectminds.com/jobs/sr-ui-developer-hunter-13041'>Sr. UI Developer - Hunter - Experian Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/sr-ui-developer-hunter-13041'>Sr. UI Developer - Hunter - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -335,7 +387,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ArthurGrandTechnologiesInc/743999692176685-ui-developer-javascript-developer'>Arthur Grand Technologies Inc UI Developer / JavaScript Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ArthurGrandTechnologiesInc/743999692176685-ui-developer-javascript-developer'>Arthur Grand Technologies Inc UI Developer / JavaScript Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -400,58 +452,6 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <h5><a href='https://upwork-tac.workable.com/j/C6780EB11A'>Upwork - Jobs: UI Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/dvele/b55dae8e-c0e3-4981-9e05-1581c5ac4218'>Dvele - UI/UX Designer</a></h5> 
-<p><span class="badge badge-light">San Diego, CA</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://fiix-software.workable.com/j/85AD3C9570'>Fiix Software - Jobs: User Interface (UI) Designer - Apply online</a></h5> 
-<p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBM9Vfwb&k=Job&j=oZUx9fwj&__jvst=Employee+Referral%3a+Eligible&__jvsd=sNjqMgw3&__jvsc=Twitter&bid=nqSwSKwV'>Apttus Careers - Principal Engineer, UI</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-04-05</p>
-<hr/>
-<h5><a href='https://ah-recruitment.join.com'>Jobs @ Althen Hensel GmbH - RECRUITMENT SOLUTIONS | JOIN</a></h5> 
-<p><span class="badge badge-light">Hamburg, Germany</span></p>
-<p>Posted on: 2019-04-05</p>
-<hr/>
-<h5><a href='https://ah-recruitment.join.com/'>Jobs @ Althen Hensel GmbH - RECRUITMENT SOLUTIONS | JOIN</a></h5> 
-<p><span class="badge badge-light">Hamburg, Germany</span></p>
-<p>Posted on: 2019-04-05</p>
-<hr/>
-<h5><a href='https://sharpist.join.com/jobs/246378-ui-ux-designer'>Job @ Sharpist (Berlin): UI/(UX) Designer | JOIN</a></h5> 
-<p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
-<p>Posted on: 2019-04-05</p>
-<hr/>
-<h5><a href='https://ah-recruitment.join.com/jobs/258391-general-counsel-m-w-d'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (L?den... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-04-05</p>
-<hr/>
-<h5><a href='https://ah-recruitment.join.com/jobs/250064-verification-manager-m-f-d'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Hambu... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-04-05</p>
-<hr/>
-<h5><a href='https://ah-recruitment.join.com/jobs/258074-senior-product-manager-m-f-d'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Kempe... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-04-05</p>
-<hr/>
-<h5><a href='https://ah-recruitment.join.com/jobs/265963-system-architect-m-f-d-secure-element'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Hambu... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-04-05</p>
-<hr/>
-<h5><a href='https://ah-recruitment.join.com/jobs/258776-senior-hr-business-partner-m-w-d-operations'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Ludwi... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-04-05</p>
-<hr/>
-<h5><a href='https://endios.join.com/jobs/263747-ui-ux-designer-m-w-d-ab-sofort-vollzeit-unbefristet'>Job @ endios (Hamburg): UI-/UX-Designer (m/w/d) ab... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-04-05</p>
-<hr/>
-<h5><a href='https://ah-recruitment.join.com/jobs/253276-software-groupmanager-trust-provisioning-m-f-d'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Graz)... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-04-05</p>
 <hr/>
 
 
