--- a/internship.html
+++ b/internship.html
@@ -61,11 +61,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sygnum.join.com/jobs/267652-trading-intern-brokerage'>Job @ Sygnum (Z?rich): Trading Intern - Brokerage | JOIN</a></h5> 
+<h5><a href='https://sygnum.join.com/jobs/267652-trading-intern-brokerage'>Job @ Sygnum (Z?rich): Trading Intern - Brokerage | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://sygnum.join.com/jobs/253896-full-stack-developer-intern-3-month-internship'>Job @ Sygnum (Z?rich): Full-Stack Developer Intern... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sygnum.join.com/jobs/253896-full-stack-developer-intern-3-month-internship'>Job @ Sygnum (Z?rich): Full-Stack Developer Intern... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -125,7 +125,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/socialchorus/6992d107-e0a1-4e85-b75a-c33fb8e61ec0'>SocialChorus - Sales Operations Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/socialchorus/6992d107-e0a1-4e85-b75a-c33fb8e61ec0'>SocialChorus - Sales Operations Intern</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -297,11 +297,11 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bookingkit.join.com/jobs/270974-internship-business-development-m-f-d'>Job @ bookingkit (Berlin): Internship Business Dev... | JOIN</a></h5> 
+<h5><a href='https://bookingkit.join.com/jobs/270974-internship-business-development-m-f-d'>Job @ bookingkit (Berlin): Internship Business Dev... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKr9VfwZ&k=Job&j=oy6Dafwb&__jvst=ER+-+Employee+Referral&__jvsd=s1mKbgw3&__jvsc=Twitter&bid=nZtRVLwu'>Nutanix Careers - Intern - Systems Engineer - Objects &amp; Calm</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKr9VfwZ&k=Job&j=oy6Dafwb&__jvst=ER+-+Employee+Referral&__jvsd=s1mKbgw3&__jvsc=Twitter&bid=nZtRVLwu'>Nutanix Careers - Intern - Systems Engineer - Objects &amp; Calm</a></h5> 
 <p><span class="badge badge-light">Paris France</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -341,7 +341,7 @@
 <p><span class="badge badge-light">Santa Monica</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/universalmusicgroup/job/ooZEafwV'>Universal Music Group Careers - Fall Internship, Business & Legal Affairs- Los Angeles</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/universalmusicgroup/job/ooZEafwV'>Universal Music Group Careers - Fall Internship, Business & Legal Affairs- Los Angeles</a></h5> 
 <p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -407,7 +407,7 @@ Rocket Internet) in Berlin (published: 19.03.2019). Apply now or check the?...</
 <p><span class="badge badge-light">Salem Salem</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/extremenetworks/job/oyHzafwI'>Extreme Networks Careers - Lab Network Engineer Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/extremenetworks/job/oyHzafwI'>Extreme Networks Careers - Lab Network Engineer Intern</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -423,7 +423,7 @@ Rocket Internet) in Berlin (published: 19.03.2019). Apply now or check the?...</
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://stantec.referrals.selectminds.com/jobs/engineering-intern-transportation-6006'>Engineering Intern, Transportation - Stantec Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://stantec.referrals.selectminds.com/jobs/engineering-intern-transportation-6006'>Engineering Intern, Transportation - Stantec Careers</a></h5> 
 <p><span class="badge badge-light">Ottawa, Ontario</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
